[project]
name = "deepresearch"
version = "0.1.0"
description = "DeepResearch HUD environment — web research with Exa"
requires-python = ">=3.11"
dependencies = [
    "hud-python>=0.5.12",
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hud]
image = "deepresearch:dev"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
only-packages = false
include = ["env.py", "tasks.py"]
